# greta

./: .gitignore  CITATION.cff  Makefile  README.md  _000.mly  _0000.mly  _0000000.mly  _011.mly  _111.mly  ast.ml  cfg.ml  converter.ml  dune  dune-project  examples.md  examples.ml  lexer.ml  main.ml  parser.mly  pp.ml  progress.md  ta.ml  utils.ml
lib/: GasCharge.ml  GlobalConfig.ml  Identifier.ml  Integer256.ml  Literal.ml  MonadUtil.ml  ParserUtil.ml  README.md  ScillaLexer.mll  ScillaParser.mly  ScillaUtil.ml  Type.ml  ast.ml  astlib.ml  cfg.ml  cfgutils.ml  converter.ml  cs3231.mly  draw.ml  drawutils.ml  dune  examples.ml  id.ml  interact.ml  learner.ml  lexer.ml  lexer.mll  mly.ml  mly_lexer.mll  mly_parse.ml  mly_parser.mly  mly_types.ml  operation.ml  operation_alt.ml  operation_old.ml  parser.mly  parseutils.ml  pp.ml  proc00.mly  proc01.mly  (+11 more)
lib/scilla-temp-res/: output.automaton  output.dot  output.trees
test/: dune  (+38 more)
test/grammars-revamp/G7/: G7a.mly  dune
test/grammars-revamp/G7/G7a_default_results_2601261040/: G7a.csv  G7a.trees  G7a_000.mly  G7a_001.mly  G7a_010.cfg  G7a_010.mly  G7a_011.mly  G7a_100.mly  G7a_101.mly  results.csv
test/grammars-revamp/G7/G7a_results_251011/: G7a.cfg  G7a.conflicts  G7a.csv  G7a_000.cfg  G7a_000.mly  G7a_001.cfg  G7a_001.mly  G7a_010.mly  G7a_011.cfg  G7a_011.mly  G7a_100.cfg  G7a_100.mly  G7a_101.cfg  G7a_101.mly  results.csv
test/grammars-revamp/G7/G7a_wo_opt123_results_2601261040/: G7a.csv  G7a_000.cfg  G7a_000.mly  G7a_001.cfg  G7a_001.mly  G7a_010.cfg  G7a_010.mly  G7a_011.cfg  G7a_011.mly  G7a_100.cfg  G7a_100.mly  G7a_101.cfg  G7a_101.mly  results.csv
test/grammars-revamp/G7/G7a_wo_opt1_results_2601261040/: G7a.csv  G7a_000.cfg  G7a_000.mly  G7a_001.cfg  G7a_001.mly  G7a_010.cfg  G7a_010.mly  G7a_011.cfg  G7a_011.mly  G7a_100.cfg  G7a_100.mly  G7a_101.cfg  G7a_101.mly  results.csv
test/grammars-revamp/G7/G7a_wo_opt2_results_2601261040/: G7a.csv  G7a_000.cfg  G7a_000.mly  G7a_001.cfg  G7a_001.mly  G7a_010.cfg  G7a_010.mly  G7a_011.cfg  G7a_011.mly  G7a_100.cfg  G7a_100.mly  G7a_101.cfg  G7a_101.mly  results.csv
test/grammars-revamp/G7/G7a_wo_opt3_results_2601261040/: G7a.csv  G7a_000.cfg  G7a_000.mly  G7a_001.cfg  G7a_001.mly  G7a_010.cfg  G7a_010.mly  G7a_011.cfg  G7a_011.mly  G7a_100.cfg  G7a_100.mly  G7a_101.cfg  G7a_101.mly  results.csv
test/grammars-revamp/G8/: dune
test/grammars-revamp/G8/G8a_default_results_2601261040/: G8a.cfg  G8a.csv  G8a_000000.cfg  G8a_000000.mly  G8a_000001.mly  G8a_000010.cfg  G8a_000010.mly  G8a_000011.mly  G8a_000100.mly  G8a_000101.mly  G8a_000110.cfg  G8a_000110.mly  G8a_000111.mly  G8a_001000.mly  G8a_001001.cfg  G8a_001001.mly  G8a_001010.mly  G8a_001011.cfg  G8a_001011.mly  G8a_010100.cfg  (+50 more)
test/grammars/scilla/: DebugMessage.ml  ErrorUtils.ml  ParserUtil.ml  Syntax.ml  Type.ml  dune  parser.cfg  parser.conflicts
(+28117 files in other folders)
