(menhir
 (modules parser)
 (flags --table --inspection --explain --dump --reference-graph --greta))

(library
  (name greta)
  (public_name greta)
  (modes byte native)
  (libraries sedlex menhirLib str core graphics qcheck num)
  (preprocess (pps ppx_deriving.std ppx_sexp_conv))
  (flags (:standard -rectypes)))

