(menhir
 (modules parser)
 (flags --table --inspection --explain --dump --reference-graph --greta))

(library
  (name g8)
  (modes byte native)
  (libraries sedlex sexplib menhirLib str core graphics qcheck num compiler-libs.common)
  (preprocess (pps ppx_deriving.std ppx_sexp_conv))
  (flags (:standard -rectypes)))


