(menhir
 (modules G8)
 (flags --table --inspection --dump --explain --reference-graph --greta))

(ocamllex lexer)

(library 
 (name kaitai)
 (modes byte native)
 (libraries sedlex sexplib menhirLib str core graphics qcheck num)
 (preprocess (pps ppx_deriving.std ppx_sexp_conv))
 (flags (:standard -rectypes)))


